app/assets/stylesheets/application.css
/*
 *= require_self
 *= require_tree .
 *= require twitter/bootstrap
 */
 body {
	background-image:url('bg.png');
	background-color:#cccccc;
	padding: 0;
	margin: 0;
}

#header-wrap {
	background-color: #424242;
	height: 100px;
	width: 100%;
  top: 0;
}

#header {
  margin: 0 auto;
	color: #FFFFFF;
	width: 588px;
}

#wrapper {
	padding: 0 6px;
	margin: 0 auto;
	width: 588px;
}

#posts {
}

#notice {
  color: green;
}

.field_with_errors {
  padding: 2px;
  background-color: red;
  display: table;
}

#error_explanation {
  width: 450px;
  border: 2px solid red;
  padding: 7px;
  padding-bottom: 0;
  margin-bottom: 20px;
  background-color: #f0f0f0;
  h2 {
    text-align: left;
    font-weight: bold;
    padding: 5px 5px 5px 15px;
    font-size: 12px;
    margin: -7px;
    margin-bottom: 0px;
    background-color: #c00;
    color: #fff;
  }
  ul li {
    font-size: 12px;
    list-style: square;
  }
}

